--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <h1>GAME HUB </h1> 
+    <a href = "othello.html" > Othello </a>
+    <a href = "white_black.html" > Othello </a>   
 </body>
 </html>
