--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
    <h1>GAME HUB </h1> 
     <a href = "othello.html" > Othello </a>
-    <a href = "white_black.html" >Ball Drop </a>   
+    <a href = "white_black.html" >Ball Drop </a>
+    <a href = "pingpong.html">Ping Pong </a>
+    
 </body>
 </html>
