--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
    <h1>GAME HUB </h1> 
     <a href = "othello.html" > Othello </a>
-    <a href = "white_black.html" >Ball Drop </a>
-    <a href = "pingpong.html">Ping Pong </a>
+    <a href = "white_black.html" > Ball Drop </a>
+    <a href = "pingpong.html"> Ping Pong </a>
+    <a href = "./PACMAN/pacman_index.html"> Pac Man </a>
     
 </body>
 </html>
