--- a/white_black.html
+++ b/white_black.html
@@ -12,7 +12,7 @@ canvas {
     position: relative; 
     top: 0;
     left: 0;
-    width: 100vw;  /* 100% */
+    width: 100%;  /* 100% */
     height: 100vh;   /* 100% */
     border: rgb(141, 105, 105);
 }
