--- a/white_black.html
+++ b/white_black.html
@@ -13,7 +13,7 @@ canvas {
     top: 0;
     left: 0;
     width: 100%;  /* 100% */
-    height: 100vh;   /* 100% */
+    height: 100%;   /* 100% */
     border: rgb(141, 105, 105);
 }
 /* body {
@@ -31,9 +31,11 @@ canvas {
     
 <script>
     const canvas = document.getElementById('canvas')
-    canvas.width = canvas.getBoundingClientRect().width;
-    canvas.height = canvas.getBoundingClientRect().height;
+//     canvas.width = canvas.getBoundingClientRect().width;
+//     canvas.height = canvas.getBoundingClientRect().height;
     const ctx = canvas.getContext('2d')
+    ctx.canvas.width = window.innerWidth;
+    ctx.canvas.height = window.innerHeight;
     
     const canvasH =  canvas.height
     const canvasW = canvas.width
