--- a/white_black.html
+++ b/white_black.html
@@ -21,6 +21,10 @@ canvas {
    font-weight: normal;
    font-style: normal;
 } */
+body{
+    margin: 0px;
+    overflow: hidden; /*disables scrollbars*/
+}
 </style>
 <body>
     <canvas id="canvas" style="border:1px solid black;">Hey canvas is NOT supperted!</canvas>
